fix: sidebar colorpicker overflow properties fixed

--- a/client/src/assets/scss/chartBar.scss
+++ b/client/src/assets/scss/chartBar.scss
@@ -171,7 +171,6 @@ label {
 .columns {
   &-option {
     max-height: calc(100vh - 55vh);
-    overflow-y: auto;
     margin: 10px 0;
     display: flex;
     flex-direction: row;
